plugins {
	id 'fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	mavenLocal()
	maven { url = "https://maven.is-immensely.gay/releases" } // Revelationary, Fractal, AEA, Arrowhead, Dimensional Reverb...
	maven { url = "https://maven.shedaniel.me/" } // Cloth Config, REI
	maven { url = "https://maven.terraformersmc.com/" } // Modmenu, EMI
	maven { url = "https://maven.nucleoid.xyz/" } // Common Protection API
	maven { url = "https://maven.blamejared.com" } // JEI
	maven { url = "https://maven.ladysnake.org/releases" } // Cardinal Components API
	maven { url = "https://maven.jamieswhiteshirt.com/libs-release/" } // Entity Reach Attribute
	maven { url = "https://api.modrinth.com/maven" } // Colorful Hearts, idwtialsimmoedm
	maven { url = "https://cfa2.cursemaven.com" }
	maven { url = "https://mvn.devos.one/releases/" } // Porting Lib
	maven { url = "https://repo.unascribed.com" } // Ears API
	maven { url = "https://dl.cloudsmith.io/public/klikli-dev/mods/maven/" } // Modonomicon
	//maven { url = "https://jitpack.io" }
	maven { url = "https://maven.wispforest.io/releases" }
	maven {
		name = 'ParchmentMC'
		url = 'https://maven.parchmentmc.org'
	}
	maven { url = "https://maven.kyrptonaught.dev" } // CustomPortalAPI as requirement for Starry Skies
	mavenCentral()
}

fabricApi {
	configureDataGeneration {
		client = true
		modId = "spectrum-datagen"
		createSourceSet = true
	}
}

dependencies {
	// jspecify annotations
	api "org.jspecify:jspecify:1.0.0"

	// graph api and its dependencies
	implementation include("org.jgrapht:jgrapht-core:1.5.2")
	implementation include("org.apfloat:apfloat:1.14.0")
	implementation include("org.jheaps:jheaps:0.14")

	// Some other dependency is adding annotations, and it throws an error without this
	compileOnly("com.demonwav.mcdev:annotations:1.0")

	// minecraft, fabric & api
	minecraft("com.mojang:minecraft:${project.minecraft_version}")
	mappings loom.layered() {
		officialMojangMappings()
		parchment("org.parchmentmc.data:parchment-${project.parchment_mappings}@zip")
	}
	modImplementation("net.fabricmc:fabric-loader:${project.loader_version}")
	modImplementation("net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}")

	// ours
	modImplementation("maven.modrinth:exclusions-lib:${project.exclusionslib_version}")
	modImplementation("de.dafuqs:revelationary:${project.revelationary_version}")
	modImplementation include("de.dafuqs:additionalentityattributes:${project.additional_entity_attributes_version}")
	modImplementation include("de.dafuqs:arrowhead:${project.arrowhead_version}")
	modImplementation include("de.dafuqs:reverb:${project.dimensional_reverb_version}")
	modImplementation include("de.dafuqs:fractal:${project.fractal_version}")

	// external and compat
	modCompileOnly("de.dafuqs.starryskies:StarrySkies:${project.starry_skies_version}")
	modApi("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") { exclude(group: "net.fabricmc.fabric-api") }
	modApi("dev.architectury:architectury-fabric:${project.architectury_version}") { exclude(group: "net.fabricmc.fabric-api") }
	modApi("com.terraformersmc:modmenu:${project.modmenu_version}")
	modImplementation("eu.pb4:common-protection-api:${project.cpa_version}")
	modImplementation("dev.emi:trinkets:${project.trinkets_version}") // https://github.com/emilyploszaj/trinkets
	modCompileOnly("me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}")
	// https://github.com/shedaniel/RoughlyEnoughItems
	modCompileOnly("dev.emi:emi-fabric:${emi_version}") // https://github.com/emilyploszaj/emi
	// https://github.com/klikli-dev/modonomicon
	modImplementation("com.klikli_dev:modonomicon-${project.minecraft_version}-fabric:${project.modonomicon_version}") {
		exclude(group: "com.klikli_dev")
		exclude(group: "mezz.jei")
	}

	switch (recipe_viewer.toLowerCase(Locale.ROOT)) {
		case "rei": modLocalRuntime("me.shedaniel:RoughlyEnoughItems-fabric:$rei_version"); break
		case "emi": modLocalRuntime("dev.emi:emi-fabric:${emi_version}"); break
		case "disabled": break
		default: println("Unknown recipe viewer specified: $recipe_viewer. Must be EMI, REI or disabled.")
	}

	// https://github.com/OnyxStudios/Cardinal-Components-API/wiki/
	modImplementation include("org.ladysnake.cardinal-components-api:cardinal-components-base:${project.cca_version}")
	modImplementation include("org.ladysnake.cardinal-components-api:cardinal-components-entity:${project.cca_version}")
	modImplementation include("org.ladysnake.cardinal-components-api:cardinal-components-item:${project.cca_version}")
	modImplementation include("org.ladysnake.cardinal-components-api:cardinal-components-level:${project.cca_version}")

	// Connect to local dev servers
	// modLocalRuntime("maven.modrinth:auth-me:${project.auth_me_version}")

	// Mod Compat
	modCompileOnly("maven.modrinth:colorful-hearts:${project.colorful_hearts_version}") { transitive = false }
	modCompileOnly("maven.modrinth:sodium:${project.sodium_version}") { transitive = false }
	modCompileOnly("com.unascribed:ears-api:${project.ears_version}")
	modCompileOnly("maven.modrinth:create-fabric:${project.create_version}") { transitive = false }
	modCompileOnly("maven.modrinth:neepmeat:${project.neepmeat_version}") { transitive = false }
	modCompileOnly("maven.modrinth:lodestonelib:${project.lodestone_version}") { transitive = false }
	modCompileOnly("maven.modrinth:travelersbackpack:${project.travelers_backpack_version}")
	modCompileOnly("maven.modrinth:botania:${project.botania_version}")
	modCompileOnly("maven.modrinth:vanity:${project.vanityslots_version}")
	modImplementation("maven.modrinth:idwtialsimmoedm:${project.idwtialsimmoedm_version}")

	//Porting Lib
	for (String module in port_lib_modules.split(",")) {
		modCompileOnly("io.github.fabricators_of_create.Porting-Lib:$module:${project.port_lib_version}") { transitive = false }
	}

	// Datagen dependencies
	// TODO - Noaaan April 7th 2025: None of these are for 1.21.1 yet, lol
	// TODO - unilock May 6th 2025: AE2 will likely never be available for Fabric 1.21.1, lol
	//modDatagenRuntimeOnly("curse.maven:gobber-427177:${project.gobber_version}")
	//modDatagenRuntimeOnly("maven.modrinth:ae2:${project.ae2_version}")
	//modDatagenRuntimeOnly("maven.modrinth:botania:${project.botania_version}")
	//modDatagenRuntimeOnly("maven.modrinth:create-fabric:${project.create_version}")
}

loom {
	accessWidenerPath = file("src/main/resources/spectrum.accesswidener")
}

processResources {
	inputs.property "version", project.version
	inputs.property "minecraft_version", project.minecraft_version
	inputs.property "loader_version", project.loader_version
	filteringCharset = "UTF-8"

	filesMatching("fabric.mod.json") {
		expand "version": project.version,
				"minecraft_version": project.minecraft_version,
				"loader_version": project.loader_version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

tasks.withType(Jar).configureEach {
	duplicatesStrategy = DuplicatesStrategy.WARN
}
tasks.withType(Zip).configureEach {
	duplicatesStrategy = DuplicatesStrategy.WARN
}
tasks.withType(Copy).configureEach {
	duplicatesStrategy = DuplicatesStrategy.WARN
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	from("LICENSE.md") {
		rename { "${it}_${project.base.archivesName.get()}" }
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		maven {
			name = "sapphoCompany"
			url = "https://maven.is-immensely.gay/releases"
			credentials {
				username = "dafuqs"
				password = System.getenv("MAVEN_PASS")
			}
		}
	}
}

gradle.projectsEvaluated {
	tasks.withType(JavaCompile).tap {
		configureEach {
			options.compilerArgs << "-Xmaxerrs" << "10000"
		}
	}
}
